dashboard menu with glyphicons

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body{
 
 /* custom */
 .main-color-bg{
-  background-color: #418de3 !important;
+  background-color: #170d52 !important;
   border-color: #000000 !important;
   color: #ffffff;
 }
