--- a/css/style.css
+++ b/css/style.css
@@ -75,16 +75,17 @@ body{
 
 /* custom */
 .main-color-bg{
-  background-color: #170d52 !important;
+  background-color: #418de3 !important;
   border-color: #000000 !important;
   color: #ffffff;
 }
 /* header */
 #header{
-  background-color: #333333;
+  background-color: #9eabbf;
   color: #ffffff;
   padding-bottom: 10px;
   margin-bottom: 15px;
+  margin-top: -21px;
 }
 
 #header .create{
@@ -114,43 +115,10 @@ body{
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    padding-top: 5px;
+    padding-top: 15px;
     position: relative;
     display: inline-block;
 }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: grey;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    border-radius: 5px;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #a9d6ee}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    background-color: pink;
-}
-
 
 
 
