--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,16 @@ body{
   text-align: center;
 }
 
+/* footer */
+
+#footer{
+  background: #333333;
+  color: #ffffff;
+  text-align: center;
+  padding: 30px;
+  margin-top: 30px;
+}
+
 /* Style The Dropdown Button */
 .dropbtn {
     background-color: #a9d6ee;
